--- a/src/app/employeelogin/employeelogin.component.html
+++ b/src/app/employeelogin/employeelogin.component.html
@@ -1,51 +1,88 @@
-
-<div class="container-fluid mt-4">
-
+<div class="container-fluid hom1">
   <div class="row">
     <div class="row">
-      <div class="col-sm-6 m-auto">
-        <div class="card w-50">
-            <form [formGroup]="loginForm">
-          <div class="card-header">
-            <div class="row">
-              <h1 class="text-center text-danger"> Login Form</h1>
-              <p class="text-center">(Employee)</p>
-            </div>
-          </div>
-          <div class="card-body">
-            <div class="row">
-              <div>
-                <label for="" class="form-label text-primary">Mail</label>
-                <input
-                  type="text"
-                  name=""
-                  class="form-control p-2"
-                  formControlName="emp_mail"
-                />
-              </div>
-              <div>
-                <label for="" class="form-label text-primary">Password</label>
-                <input
-                  type="text"
-                  name=""
-                  class="form-control p-2"
-                  formControlName="emp_password"
-                />
-              </div>
-              <div class="text-center">
-                <button class="btn btn-success btn w-50 p-2 mt-4" (click)="login()">
-                  Sign-in
-                </button>
-              </div>
-              <div>
-                <a routerLink="employeeregister">Don't Have An Account Register Here</a>
+      <div class="col-md-4 m-auto">
+        <div class="card w-100 mt-5">
+          <form [formGroup]="loginForm">
+            <div class="card-header">
+              <div class="row">
+                <h1 class="text-center text-light">Login Form</h1>
+                <p class="text-center">(Employee)</p>
               </div>
             </div>
-          </div>
-           </form>
+            <div class="card-body">
+              <div class="row">
+                <div>
+                  <label for="" class="form-label text-light">Emp_Mail</label>
+                  <input
+                    type="text"
+                    name=""
+                    class="form-control p-2"
+                    formControlName="emp_mail"
+                  />
+                  <div
+                    *ngIf="
+                      loginForm.get('emp_mail')?.touched &&
+                      loginForm.get('emp_mail')?.invalid
+                    "
+                    style="color: red"
+                  >
+                   <small
+                    *ngIf="loginForm.get('emp_mail')?.errors?.['required']"
+                    >Email is required.</small
+                  >
+                  <small
+                    *ngIf="loginForm.get('emp_mail')?.errors?.['email']"
+                    >Enter a valid email.</small
+                  >
+                  </div>
+                </div>
+                <div>
+                  <label for="" class="form-label text-light"
+                    >Emp_Password</label
+                  >
+                  <input
+                    type="text"
+                    name=""
+                    class="form-control p-2"
+                    formControlName="emp_password"
+                  />
+                  <div
+                    *ngIf="
+                      loginForm.get('emp_password')?.touched &&
+                      loginForm.get('emp_password')?.invalid
+                    "style="color: red;"
+                  >
+                    <div
+                      *ngIf="loginForm.get('emp_password')?.errors?.['required']"
+                    >
+                      Password is required.
+                    </div>
+                    <div
+                      *ngIf="loginForm.get('emp_password')?.errors?.['pattern']"
+                    >
+                      Must be characters and 8 letters.
+                    </div>
+                    <div
+                      *ngIf="loginForm.get('emp_password')?.errors?.['minlength']"
+                    >
+                      Must be characters and 8 letters.
+                    </div>
+                  </div>
+                </div>
+                <div class="text-center">
+                  <button
+                    class="btn btn-success btn w-50 p-2 mt-4"
+                    (click)="login()"
+                  >
+                    Sign-in
+                  </button>
+                </div>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
   </div>
- 
 </div>
