--- a/src/app/employeeregister/employeeregister.component.css
+++ b/src/app/employeeregister/employeeregister.component.css
@@ -1,3 +1,24 @@
 a{
     padding-left:85px;
 }
+.card-header{
+     background: linear-gradient(180deg, rgb(150, 200, 224), rgb(186, 186, 240));
+    height: 90px;
+    
+}
+ .formbg{
+     background: linear-gradient(180deg,  rgb(185, 216, 244), rgb(178, 178, 248));
+ }
+ .card {
+  background-color: rgba(247, 237, 237, 0.2);
+  backdrop-filter: blur(10px);
+  border-radius: 12px;
+  
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  color: #000;
+  width: 100%;
+  max-width: 500px;
+}
+.btn {
+  background: linear-gradient(180deg,  rgb(147, 188, 226), rgb(165, 165, 224));
+}
